# rust-practice

./: .gitignore  README.org
dive-into-rust/: Cargo.toml
dive-into-rust/src/: arc.rs  barrier.rs  borrow.rs  channel.rs  closure.rs  condvar.rs  crossbeam.rs  dereference.rs  dispatch.rs  drop.rs  drop_check.rs  generator.rs  global.rs  interior_mut.rs  lib.rs  lifetime.rs  macrodemo.rs  nll.rs  parkinglot.rs  philosopher.rs  rayon.rs  subnormal.rs  subtyping.rs  threadpool.rs  traits.rs  typesize.rs  unsafe_demo.rs  variance.rs
hash-pipeline/: hash-pipeline.org
hash-pipeline/hash-channel/: Cargo.toml
hash-pipeline/hash-channel/src/: main.rs
hash-pipeline/hash-circular/: Cargo.toml
hash-pipeline/hash-circular/src/: main.rs
hash-pipeline/hash-idle-blocked/: Cargo.toml
hash-pipeline/hash-idle-blocked/src/: main.rs
hash-pipeline/hash-parallel/: Cargo.toml
hash-pipeline/hash-parallel/src/: main.rs
hash-pipeline/hash-single/: Cargo.toml
hash-pipeline/hash-single/src/: main.rs
intro-to-rust-lang/p14-threads/: Cargo.toml
intro-to-rust-lang/p14-threads/src/: main.rs
intro-to-rust-lang/p16-sniffer/: Cargo.toml
intro-to-rust-lang/p16-sniffer/src/: main.rs
intro-to-rust-lang/p18-blockchain/: Cargo.toml
intro-to-rust-lang/p18-blockchain/src/: blockchain.rs  main.rs
intro-to-rust-lang/p8-snake/: Cargo.toml
intro-to-rust-lang/p8-snake/src/: game.rs  main.rs  snake.rs
mastering-rust/ch11_log/env_logger_demo/: Cargo.toml
mastering-rust/ch11_log/env_logger_demo/src/: main.rs
mastering-rust/ch11_log/log4rs_demo/: Cargo.toml
mastering-rust/ch11_log/log4rs_demo/my_app/: Cargo.toml
mastering-rust/ch11_log/log4rs_demo/my_app/src/: main.rs
mastering-rust/ch11_log/log4rs_demo/my_lib/: Cargo.toml
mastering-rust/ch11_log/log4rs_demo/my_lib/src/: lib.rs
mastering-rust/ch11_log/slog_demo/: Cargo.toml
mastering-rust/ch11_log/slog_demo/src/: enemy.rs  main.rs  player.rs  weapon.rs
mastering-rust/ch11_log/user_auth/: Cargo.toml
mastering-rust/ch12_net/rudis_async/: Cargo.toml
mastering-rust/ch12_net/rudis_async/src/: codec.rs  commands.rs  main.rs
mastering-rust/ch12_net/rudis_sync/: Cargo.toml
mastering-rust/ch12_net/rudis_sync/src/: commands.rs  main.rs
mastering-rust/ch13_web/hyperurl/: Cargo.toml
mastering-rust/ch13_web/hyperurl/src/: index.rs  main.rs  service.rs  shortener.rs
mastering-rust/ch13_web/linksnap/: Cargo.toml
mastering-rust/ch13_web/linksnap/src/: links.rs  main.rs  route_handlers.rs  state.rs
mastering-rust/ch13_web/shorten/: Cargo.toml
mastering-rust/ch13_web/shorten/src/: main.rs
talent-plan/rust/project-1/: Cargo.toml
talent-plan/rust/project-1/src/: kv.rs
talent-plan/rust/project-2/: Cargo.toml
talent-plan/rust/project-2/src/: error.rs  kv.rs
talent-plan/rust/project-3/: Cargo.toml
talent-plan/rust/project-3/benches/: engine_bench.rs
talent-plan/rust/project-3/src/: error.rs  server.rs
talent-plan/rust/project-3/tests/: kv_store.rs
talent-plan/rust/project-4/: Cargo.toml
talent-plan/rust/project-4/src/: error.rs
talent-plan/rust/project-4/src/engines/: mod.rs
talent-plan/rust/project-4/src/thread_pool/: mod.rs  shared_queue.rs
talent-plan/rust/project-5/: Cargo.toml
talent-plan/rust/project-5/src/: error.rs
talent-plan/rust/project-5/src/engines/: kvs.rs  sled.rs
talent-plan/rust/project-5/src/thread_pool/: mod.rs  naive.rs  shared_queue.rs
the-book/add/add_one/src/: lib.rs
the-book/add/adder/src/: main.rs
the-book/hello/: 404.html  hello.html
the-book/hello/src/: lib.rs
the-book/minigrep/src/: lib.rs
tokio/mini-redis/: Cargo.toml
tokio/mini-redis/examples/: hello_world.rs  pub.rs  sub.rs
tokio/mini-redis/src/: buffer.rs  client.rs  connection.rs  db.rs  frame.rs  lib.rs  parse.rs  server.rs  shutdown.rs
tokio/mini-redis/src/cmd/: get.rs  mod.rs  publish.rs  set.rs  subscribe.rs  unknown.rs
tokio/mini-redis/tests/: buffer.rs  client.rs  server.rs
tokio/my-redis/: Cargo.toml
tokio/my-redis/examples/: hello-redis.rs
too-many-lists/lists/src/: fifth.rs  fifth2.rs  first.rs  fourth.rs  lib.rs  second.rs  silly1.rs  silly2.rs  sixth.rs  third.rs
yew/counter/: Cargo.toml
yew/counter/src/: main.rs
yew/crm/: Cargo.toml
yew/crm/src/: add_client.rs  main.rs
yew/timer/: Cargo.toml  index.scss
yew/timer/src/: main.rs
yew/todomvc/: Cargo.toml
yew/todomvc/src/: main.rs  state.rs
yew/yew-app/: Cargo.toml
yew/yew-app/src/: lib.rs
zero2prod/: .dockerignore  .env  Cargo.toml  Dockfile  configuration.yaml  flake.nix  spec.yaml  test.http  zero2prod.org
zero2prod/configuration/: base.yaml
zero2prod/migrations/: .sqlfluff  20241009133530_create_subscriptions_table.sql  20250401073244_make_status_not_null_in_subscriptions.sql  20250401074828_create_subscription_tokens_table.sql  20250920030615_create_users_table.sql  20250924105522_seed_user.sql  20250930025823_create_idempotency_table.sql  20251012025635_create_newsletter_issues_table.sql  20251012034028_create_issue_delivery_queue_table.sql
zero2prod/scripts/: init_db.sh  init_redis.sh
zero2prod/src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
zero2prod/src/authentication/: middleware.rs  mod.rs  password.rs
zero2prod/src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
zero2prod/src/email_client/: mod.rs
zero2prod/src/idempotency/: key.rs  persistence.rs
zero2prod/src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
zero2prod/src/routes/admin/: dashboard.rs  logout.rs  mod.rs
zero2prod/src/routes/admin/newsletter/: get.rs  post.rs
zero2prod/src/routes/admin/password/: get.rs  mod.rs  post.rs
zero2prod/src/routes/home/: home.html
zero2prod/src/routes/login/: get.rs  login.html  post.rs
zero2prod/tests/: health_check.rs
zero2prod/tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
