[package]
name = "dive-into-rust-demos"
version = "0.1.0"
authors = ["ShuLiang <shuliang@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
parking_lot = "0.11.1"
rayon = "1.5.1"
scoped_threadpool = "0.1.9"
threadpool = "1.8.1"
