[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.22", default-features = false, features = [ "clock" ] }
config = "0.14.0"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.6.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.10.0", features = [ "v4" ] }
validator = "0.16.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.9.2", features = ["std_rng"] }
thiserror = "2.0.16"
anyhow = "1.0.99"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
claims = "0.8.0"
fake = "~2.3"
linkify = "0.10.0"
once_cell = "1.20.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.140"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6.3"
