[package]
name = "mini-redis"
version = "0.1.0"
authors = ["ShuLiang <shuliang@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.2"
atoi = "0.4.0"
bytes = "1.0.1"
structopt = "0.3.21"
tokio = { version = "1.7.1", features = ["full"] }
tokio-stream = "0.1.6"
tracing = "0.1.26"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.19"

[dev-dependencies]
tokio = { version = "1.7.1", features = ["test-util"] }

[[bin]]
name = "mini-redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"
