[package]
name = "kvs"
version = "0.1.0"
authors = ["ShuLiang <shuliang@live.cn>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.33.3"
structopt = "0.3.21"
failure = "0.1.8"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
env_logger = "0.8.3"
sled = "0.34.6"

[dev-dependencies]
assert_cmd = "1.0.3"
criterion = "0.3.4"
predicates = "1.0.8"
rand = { version = "0.8.3", features = ["small_rng"] }
tempfile = "3.2.0"
walkdir = "2.3.2"

[[bench]]
name = "engine_bench"
harness = false
