[package]
name = "kvs"
version = "0.1.0"
authors = ["ShuLiang <shuliang@live.cn>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.33.3"
# crossbeam = "0.8.0"
crossbeam = "0.7.1"
crossbeam-skiplist = { version = "0.0.0", git = "https://github.com/crossbeam-rs/crossbeam.git", rev = "8cc906b" }
env_logger = "0.8.3"
failure = "0.1.8"
log = "0.4.14"
num_cpus = "1.13.0"
rayon = "1.5.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sled = "0.34.6"
structopt = "0.3.21"
tokio = "0.1.21"
tokio-serde-json = "0.2.0"

[dev-dependencies]
assert_cmd = "1.0.4"
criterion = "0.3.4"
crossbeam-utils = "0.8.4"
panic-control = "0.1.4"
predicates = "1.0.8"
rand = "0.8.3"
tempfile = "3.2.0"
walkdir = "2.3.2"
